# winAPI

./: CMakeLists.txt  README.md
src/CollectMenu/: header.h  main.c  procedure.c
src/CollectMenu/resource/: main.rc
src/HelloWorld/: header.h  main.c  process.c
src/HelloWorld/resource/: main.rc
src/MenuRc/: header.h  main.c  procedure.c
src/MenuRc/resource/: main.rc
